--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 				<nav>
 					<ul>
 						<li>
-							<a href="https://ide-cae67b8311914c51ba996e351edd0c88-8080.cs50.ws/%D0%90%D0%BD%D0%B3%D0%BB%D0%B8%D0%B9%D1%81%D0%BA%D0%B8%D0%B9.html">Английский </a>
+							<a href="English.html">Английский</a>
 						</li>
 						<li>
-							<a href="https://ide-cae67b8311914c51ba996e351edd0c88-8080.cs50.ws/%D0%A4%D1%80%D0%B0%D0%BD%D1%86%D1%83%D0%B7%D1%81%D0%BA%D0%B8%D0%B9.html">Французский</a>
+							<a href="French.html">Французский</a>
 						</li>
 						<li>
 							<a href="https://ide-cae67b8311914c51ba996e351edd0c88-8080.cs50.ws/%D0%9D%D0%B5%D0%BC%D0%B5%D1%86%D0%BA%D0%B8%D0%B9.html">Немецкий</a>
@@ -82,4 +82,4 @@
                 </div
 		</footer>
 	</body>
-</html>
+</html>h
