--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
 							<a href="French.html">Французский</a>
 						</li>
 						<li>
-							<a href="https://ide-cae67b8311914c51ba996e351edd0c88-8080.cs50.ws/%D0%9D%D0%B5%D0%BC%D0%B5%D1%86%D0%BA%D0%B8%D0%B9.html">Немецкий</a>
+							<a href="German.html">Немецкий</a>
 						</li>
+						<il>
+							<a href="15game.html"> 15 Game</a>
+						</il>
 					</ul>
 				</nav>
 			</div>
