correct title  name for 15game.html

--- a/15game.html
+++ b/15game.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
       <meta charset="UTF-8">
-      <title>Pyatnashka</title>
+      <title>15Game</title>
       <script src="gamescript.js"></script>
     </head>
     <body>
